--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.14",
+    "@mui/material": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^5.3.9",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
